# car_charger_robot

./: CMakeLists.txt  README.md  package.xml
config/: control.yaml
launch/: car_world.launch.py  rviz.launch.py
meshes/: base_link.STL  base_link_camera.STL  link1.STL  link3.STL  link4.STL  link5.STL  link6.STL
meshes/meshes_old/: base_link.STL  link2.STL  link3.STL  link5.STL
rviz/: crx_rviz.rviz
scripts/: fk_publisher.py  ik_publisher.py  inverse_kinematics.py  perception_node.py
scripts/test/: calc_coords.py  circle_generation.py  fk_publisher.py
urdf/: camera_urdf.urdf.xacro  crx_description.urdf.xacro
worlds/: car_world.world  charge_station.world  chargebot_world.world
